# chobot

./: .env.example  .gitignore  LICENSE  README.md  acnh.json  cache_dump.json  chobot.db-shm  chobot.db-wal  main.py  pyproject.toml  requirements.txt  warnings.db
admin/: .env.example  README.md  auth.py  database.py  main.py  models.py  requirements.txt  schemas.py  seed.py
admin/templates/: island_form.html  islands.html  login.html
api/: __init__.py  dashboard.py  flask_api.py
api/static/css/: dashboard.css
api/templates/dashboard/: 403.html  analytics.html  base.html  blocklist.html  database.html  incidents.html  index.html  island_detail.html  islands.html  login.html  logs.html  onboarding.html  ops.html  setup.html  (+3 more)
bots/: __init__.py  discord_command_bot.py  flight_logger.py  twitch_bot.py
docs/: self_hosted_streamer_toolkit.md
scripts/: install.bat  start_all.bat  start_bot.bat  start_dashboard.bat
tests/: test_chopaeng_ai.py  test_discord_setup.py  test_dodo_parser.py  test_dodo_store.py  test_embed_templates.py  test_flight_logger_identity_flags.py  test_local_config.py  test_onboarding.py  test_ops_routes.py  test_ops_status.py
utils/: __init__.py  auth_tokens.py  chopaeng_ai.py  config.py  data_manager.py  database.py  db.py  db_migration.py  db_models.py  discord_http.py  discord_membership.py  discord_setup.py  dodo_parser.py  dodo_store.py  embed_templates.py  helpers.py  island_access.py  island_status.py  knowledge_base.md  local_config.py  models.py  nickname_format.py  nookipedia.py  ops_status.py  setup_health.py  tenant_config.py
